[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cieloconnectapi"
version = "0.0.1"
description = "Python package for Cielo Connect APIs."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Muhammad Ihsan", email = "ihsan.cielo@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
