[project]
name = "cielo-connect-api"
version = "0.1.0"
description = "API for communicating with Cielo Home Devices"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Cielo Wigle Inc.", email = "info@cielowigle.com" }]
dependencies = ["aiohttp>=3.9"]

[project.urls]
Homepage = "https://github.com/cielowigleinc/cielo-connect-api"
Repository = "https://github.com/cielowigleinc/cielo-connect-api"
Changelog = "https://github.com/your-org/cielo-home-cloud/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
